// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitGcode production composition — cnc > multi-tool pocket + tabbed profile — byte-pinned 1`] = `
"G21
G90
G94
; tool: 3.175 mm (1/8") end mill (load before starting)
G0 Z3.810
M3 S12000
G4 P3.000
; cnc layer pocket pocket tool 3.175 mm feed 1000 plunge 300 spindle 12000 rpm passes 11
G0 X35.713 Y364.288
G1 Z-2.000 F300
G1 X34.288 Y364.288 F1000
G1 X34.288 Y365.713
G1 X35.713 Y365.713
G1 X35.713 Y364.288
G0 Z3.810
G0 X36.983 Y363.018
G1 Z-2.000 F300
G1 X33.018 Y363.018 F1000
G1 X33.018 Y366.983
G1 X36.983 Y366.983
G1 X36.983 Y363.018
G0 Z3.810
G0 X38.253 Y361.748
G1 Z-2.000 F300
G1 X31.748 Y361.748 F1000
G1 X31.748 Y368.253
G1 X38.253 Y368.253
G1 X38.253 Y361.748
G0 Z3.810
G0 X39.523 Y360.478
G1 Z-2.000 F300
G1 X30.478 Y360.478 F1000
G1 X30.478 Y369.523
G1 X39.523 Y369.523
G1 X39.523 Y360.478
G0 Z3.810
G0 X40.793 Y359.208
G1 Z-2.000 F300
G1 X29.208 Y359.208 F1000
G1 X29.208 Y370.793
G1 X40.793 Y370.793
G1 X40.793 Y359.208
G0 Z3.810
G0 X42.063 Y357.938
G1 Z-2.000 F300
G1 X27.938 Y357.938 F1000
G1 X27.938 Y372.063
G1 X42.063 Y372.063
G1 X42.063 Y357.938
G0 Z3.810
G0 X43.333 Y356.668
G1 Z-2.000 F300
G1 X26.668 Y356.668 F1000
G1 X26.668 Y373.333
G1 X43.333 Y373.333
G1 X43.333 Y356.668
G0 Z3.810
G0 X44.603 Y355.398
G1 Z-2.000 F300
G1 X25.398 Y355.398 F1000
G1 X25.398 Y374.603
G1 X44.603 Y374.603
G1 X44.603 Y355.398
G0 Z3.810
G0 X45.873 Y354.128
G1 Z-2.000 F300
G1 X24.128 Y354.128 F1000
G1 X24.128 Y375.873
G1 X45.873 Y375.873
G1 X45.873 Y354.128
G0 Z3.810
G0 X47.143 Y352.858
G1 Z-2.000 F300
G1 X22.858 Y352.858 F1000
G1 X22.858 Y377.143
G1 X47.143 Y377.143
G1 X47.143 Y352.858
G0 Z3.810
G0 X48.413 Y351.588
G1 Z-2.000 F300
G1 X21.588 Y351.588 F1000
G1 X21.588 Y378.413
G1 X48.413 Y378.413
G1 X48.413 Y351.588
G0 Z3.810
M5
G0 X0.000 Y0.000
; tool change: load 6.35 mm (1/4") end mill
; re-zero Z on the stock top, then cycle-start to resume
M0
M3 S12000
G4 P3.000
; cnc layer profile profile-outside tool 6.350 mm feed 1000 plunge 300 spindle 12000 rpm passes 5
G0 Z3.810
G0 X66.825 Y286.825
G1 Z-2.000 F300
G1 X66.825 Y333.175 F1000
G1 X113.175 Y333.175
G1 X113.175 Y286.825
G1 X66.825 Y286.825
G0 Z3.810
G0 X66.825 Y316.175
G1 Z-3.000 F300
G1 X66.825 Y333.175 F1000
G1 X83.825 Y333.175
G0 Z3.810
G0 X96.175 Y333.175
G1 Z-3.000 F300
G1 X113.175 Y333.175 F1000
G1 X113.175 Y316.175
G0 Z3.810
G0 X113.175 Y303.825
G1 Z-3.000 F300
G1 X113.175 Y286.825 F1000
G1 X96.175 Y286.825
G0 Z3.810
G0 X83.825 Y286.825
G1 Z-3.000 F300
G1 X66.825 Y286.825 F1000
G1 X66.825 Y303.825
G0 Z3.810
M5
G0 X0.000 Y0.000
"
`;

exports[`emitGcode production composition — fixture snapshots > curve-bearing-svg produces stable G-code through the shipped pipeline 1`] = `
"G21
G90
M3 S0
; layer line-red color #ff0000 power 30% speed 1500 mm/min passes 1
; pass 1 of 1
G0 X10.000 Y350.000 S0
G1 X10.449 Y355.273 F1500 S300
G1 X11.719 Y359.844
G1 X13.691 Y363.711
G1 X16.250 Y366.875
G1 X19.277 Y369.336
G1 X22.656 Y371.094
G1 X26.270 Y372.148
G1 X30.000 Y372.500
G1 X33.730 Y372.148
G1 X37.344 Y371.094
G1 X40.723 Y369.336
G1 X43.750 Y366.875
G1 X46.309 Y363.711
G1 X48.281 Y359.844
G1 X49.551 Y355.273
G1 X50.000 Y350.000
G1 X50.409 Y354.009
G1 X51.582 Y357.754
G1 X53.435 Y361.150
G1 X55.886 Y364.114
G1 X58.850 Y366.565
G1 X62.246 Y368.418
G1 X65.991 Y369.591
G1 X70.000 Y370.000
G1 X74.009 Y369.591
G1 X77.754 Y368.418
G1 X81.150 Y366.565
G1 X84.114 Y364.114
G1 X86.565 Y361.150
G1 X88.418 Y357.754
G1 X89.591 Y354.009
G1 X90.000 Y350.000
M5
G0 X0.000 Y0.000 S0
"
`;

exports[`emitGcode production composition — fixture snapshots > fill-donut-with-overscan produces stable G-code through the shipped pipeline 1`] = `
"G21
G90
M3 S0
M5
M4 S0
; fill layer fill-#0000ff color #0000ff power 30% speed 1500 mm/min passes 1 overscan 5.000 mm
; pass 1 of 1
G0 X45.000 Y310.000 S0
G0 X50.000 Y310.000 S0
G1 X90.000 Y310.000 F1500 S300
G0 X95.000 Y310.000 S0
G0 X95.000 Y312.000 S0
G0 X90.000 Y312.000 S0
G1 X50.000 Y312.000 F1500 S300
G0 X45.000 Y312.000 S0
G0 X45.000 Y314.000 S0
G0 X50.000 Y314.000 S0
G1 X90.000 Y314.000 F1500 S300
G0 X95.000 Y314.000 S0
G0 X95.000 Y316.000 S0
G0 X90.000 Y316.000 S0
G1 X50.000 Y316.000 F1500 S300
G0 X45.000 Y316.000 S0
G0 X45.000 Y318.000 S0
G0 X50.000 Y318.000 S0
G1 X90.000 Y318.000 F1500 S300
G0 X95.000 Y318.000 S0
G0 X95.000 Y320.000 S0
G0 X90.000 Y320.000 S0
G1 X80.000 Y320.000 F1500 S300
G0 X75.000 Y320.000 S0
G0 X65.000 Y320.000 S0
G0 X60.000 Y320.000 S0
G1 X50.000 Y320.000 F1500 S300
G0 X45.000 Y320.000 S0
G0 X45.000 Y322.000 S0
G0 X50.000 Y322.000 S0
G1 X60.000 Y322.000 F1500 S300
G0 X65.000 Y322.000 S0
G0 X75.000 Y322.000 S0
G0 X80.000 Y322.000 S0
G1 X90.000 Y322.000 F1500 S300
G0 X95.000 Y322.000 S0
G0 X95.000 Y324.000 S0
G0 X90.000 Y324.000 S0
G1 X80.000 Y324.000 F1500 S300
G0 X75.000 Y324.000 S0
G0 X65.000 Y324.000 S0
G0 X60.000 Y324.000 S0
G1 X50.000 Y324.000 F1500 S300
G0 X45.000 Y324.000 S0
G0 X45.000 Y326.000 S0
G0 X50.000 Y326.000 S0
G1 X60.000 Y326.000 F1500 S300
G0 X65.000 Y326.000 S0
G0 X75.000 Y326.000 S0
G0 X80.000 Y326.000 S0
G1 X90.000 Y326.000 F1500 S300
G0 X95.000 Y326.000 S0
G0 X95.000 Y328.000 S0
G0 X90.000 Y328.000 S0
G1 X80.000 Y328.000 F1500 S300
G0 X75.000 Y328.000 S0
G0 X65.000 Y328.000 S0
G0 X60.000 Y328.000 S0
G1 X50.000 Y328.000 F1500 S300
G0 X45.000 Y328.000 S0
G0 X45.000 Y330.000 S0
G0 X50.000 Y330.000 S0
G1 X60.000 Y330.000 F1500 S300
G0 X65.000 Y330.000 S0
G0 X75.000 Y330.000 S0
G0 X80.000 Y330.000 S0
G1 X90.000 Y330.000 F1500 S300
G0 X95.000 Y330.000 S0
G0 X95.000 Y332.000 S0
G0 X90.000 Y332.000 S0
G1 X80.000 Y332.000 F1500 S300
G0 X75.000 Y332.000 S0
G0 X65.000 Y332.000 S0
G0 X60.000 Y332.000 S0
G1 X50.000 Y332.000 F1500 S300
G0 X45.000 Y332.000 S0
G0 X45.000 Y334.000 S0
G0 X50.000 Y334.000 S0
G1 X60.000 Y334.000 F1500 S300
G0 X65.000 Y334.000 S0
G0 X75.000 Y334.000 S0
G0 X80.000 Y334.000 S0
G1 X90.000 Y334.000 F1500 S300
G0 X95.000 Y334.000 S0
G0 X95.000 Y336.000 S0
G0 X90.000 Y336.000 S0
G1 X80.000 Y336.000 F1500 S300
G0 X75.000 Y336.000 S0
G0 X65.000 Y336.000 S0
G0 X60.000 Y336.000 S0
G1 X50.000 Y336.000 F1500 S300
G0 X45.000 Y336.000 S0
G0 X45.000 Y338.000 S0
G0 X50.000 Y338.000 S0
G1 X60.000 Y338.000 F1500 S300
G0 X65.000 Y338.000 S0
G0 X75.000 Y338.000 S0
G0 X80.000 Y338.000 S0
G1 X90.000 Y338.000 F1500 S300
G0 X95.000 Y338.000 S0
G0 X95.000 Y340.000 S0
G0 X90.000 Y340.000 S0
G1 X50.000 Y340.000 F1500 S300
G0 X45.000 Y340.000 S0
G0 X45.000 Y342.000 S0
G0 X50.000 Y342.000 S0
G1 X90.000 Y342.000 F1500 S300
G0 X95.000 Y342.000 S0
G0 X95.000 Y344.000 S0
G0 X90.000 Y344.000 S0
G1 X50.000 Y344.000 F1500 S300
G0 X45.000 Y344.000 S0
G0 X45.000 Y346.000 S0
G0 X50.000 Y346.000 S0
G1 X90.000 Y346.000 F1500 S300
G0 X95.000 Y346.000 S0
G0 X95.000 Y348.000 S0
G0 X90.000 Y348.000 S0
G1 X50.000 Y348.000 F1500 S300
G0 X45.000 Y348.000 S0
M5
G0 X0.000 Y0.000 S0
"
`;

exports[`emitGcode production composition — fixture snapshots > mixed scene with user-origin placement produces stable translated G-code 1`] = `
"G21
G90
M3 S0
; layer line-red color #ff0000 power 30% speed 1500 mm/min passes 1
; pass 1 of 1
G0 X0.000 Y95.000 S0
G1 X20.000 Y95.000 F1500 S300
M5
M4 S0
; fill layer fill-#0000ff color #0000ff power 30% speed 1500 mm/min passes 1 overscan 5.000 mm
; pass 1 of 1
G0 X35.000 Y15.000 S0
G0 X40.000 Y15.000 S0
G1 X80.000 Y15.000 F1500 S300
G0 X85.000 Y15.000 S0
G0 X85.000 Y17.000 S0
G0 X80.000 Y17.000 S0
G1 X40.000 Y17.000 F1500 S300
G0 X35.000 Y17.000 S0
G0 X35.000 Y19.000 S0
G0 X40.000 Y19.000 S0
G1 X80.000 Y19.000 F1500 S300
G0 X85.000 Y19.000 S0
G0 X85.000 Y21.000 S0
G0 X80.000 Y21.000 S0
G1 X40.000 Y21.000 F1500 S300
G0 X35.000 Y21.000 S0
G0 X35.000 Y23.000 S0
G0 X40.000 Y23.000 S0
G1 X80.000 Y23.000 F1500 S300
G0 X85.000 Y23.000 S0
G0 X85.000 Y25.000 S0
G0 X80.000 Y25.000 S0
G1 X70.000 Y25.000 F1500 S300
G0 X65.000 Y25.000 S0
G0 X55.000 Y25.000 S0
G0 X50.000 Y25.000 S0
G1 X40.000 Y25.000 F1500 S300
G0 X35.000 Y25.000 S0
G0 X35.000 Y27.000 S0
G0 X40.000 Y27.000 S0
G1 X50.000 Y27.000 F1500 S300
G0 X55.000 Y27.000 S0
G0 X65.000 Y27.000 S0
G0 X70.000 Y27.000 S0
G1 X80.000 Y27.000 F1500 S300
G0 X85.000 Y27.000 S0
G0 X85.000 Y29.000 S0
G0 X80.000 Y29.000 S0
G1 X70.000 Y29.000 F1500 S300
G0 X65.000 Y29.000 S0
G0 X55.000 Y29.000 S0
G0 X50.000 Y29.000 S0
G1 X40.000 Y29.000 F1500 S300
G0 X35.000 Y29.000 S0
G0 X35.000 Y31.000 S0
G0 X40.000 Y31.000 S0
G1 X50.000 Y31.000 F1500 S300
G0 X55.000 Y31.000 S0
G0 X65.000 Y31.000 S0
G0 X70.000 Y31.000 S0
G1 X80.000 Y31.000 F1500 S300
G0 X85.000 Y31.000 S0
G0 X85.000 Y33.000 S0
G0 X80.000 Y33.000 S0
G1 X70.000 Y33.000 F1500 S300
G0 X65.000 Y33.000 S0
G0 X55.000 Y33.000 S0
G0 X50.000 Y33.000 S0
G1 X40.000 Y33.000 F1500 S300
G0 X35.000 Y33.000 S0
G0 X35.000 Y35.000 S0
G0 X40.000 Y35.000 S0
G1 X50.000 Y35.000 F1500 S300
G0 X55.000 Y35.000 S0
G0 X65.000 Y35.000 S0
G0 X70.000 Y35.000 S0
G1 X80.000 Y35.000 F1500 S300
G0 X85.000 Y35.000 S0
G0 X85.000 Y37.000 S0
G0 X80.000 Y37.000 S0
G1 X70.000 Y37.000 F1500 S300
G0 X65.000 Y37.000 S0
G0 X55.000 Y37.000 S0
G0 X50.000 Y37.000 S0
G1 X40.000 Y37.000 F1500 S300
G0 X35.000 Y37.000 S0
G0 X35.000 Y39.000 S0
G0 X40.000 Y39.000 S0
G1 X50.000 Y39.000 F1500 S300
G0 X55.000 Y39.000 S0
G0 X65.000 Y39.000 S0
G0 X70.000 Y39.000 S0
G1 X80.000 Y39.000 F1500 S300
G0 X85.000 Y39.000 S0
G0 X85.000 Y41.000 S0
G0 X80.000 Y41.000 S0
G1 X70.000 Y41.000 F1500 S300
G0 X65.000 Y41.000 S0
G0 X55.000 Y41.000 S0
G0 X50.000 Y41.000 S0
G1 X40.000 Y41.000 F1500 S300
G0 X35.000 Y41.000 S0
G0 X35.000 Y43.000 S0
G0 X40.000 Y43.000 S0
G1 X50.000 Y43.000 F1500 S300
G0 X55.000 Y43.000 S0
G0 X65.000 Y43.000 S0
G0 X70.000 Y43.000 S0
G1 X80.000 Y43.000 F1500 S300
G0 X85.000 Y43.000 S0
G0 X85.000 Y45.000 S0
G0 X80.000 Y45.000 S0
G1 X40.000 Y45.000 F1500 S300
G0 X35.000 Y45.000 S0
G0 X35.000 Y47.000 S0
G0 X40.000 Y47.000 S0
G1 X80.000 Y47.000 F1500 S300
G0 X85.000 Y47.000 S0
G0 X85.000 Y49.000 S0
G0 X80.000 Y49.000 S0
G1 X40.000 Y49.000 F1500 S300
G0 X35.000 Y49.000 S0
G0 X35.000 Y51.000 S0
G0 X40.000 Y51.000 S0
G1 X80.000 Y51.000 F1500 S300
G0 X85.000 Y51.000 S0
G0 X85.000 Y53.000 S0
G0 X80.000 Y53.000 S0
G1 X40.000 Y53.000 F1500 S300
G0 X35.000 Y53.000 S0
; image layer image-#808080 color #808080 power 30%
; 10 × 5 px, 10.000 × 5.000 mm
; feed 1500 mm/min, overscan 5.000 mm, dot width correction 0.000 mm
M5
M4 S0
G0 X90.000 Y0.500 S0
G1 X95.000 F1500 S0
G1 X100.000 S300
G1 X105.000 S0
G0 X105.000 Y1.500 S0
G1 X100.000 S0
G1 X95.000 S300
G1 X90.000 S0
G0 X90.000 Y2.500 S0
G1 X95.000 S0
G1 X100.000 S300
G1 X105.000 S0
G0 X100.000 Y3.500 S0
G1 X95.000 S0
G1 X90.000 S300
G1 X85.000 S0
G0 X85.000 Y4.500 S0
G1 X90.000 S0
G1 X95.000 S300
G1 X100.000 S0
M5
G0 X0.000 Y0.000 S0
"
`;

exports[`emitGcode production composition — fixture snapshots > mixed-line-fill-image produces stable G-code through the shipped pipeline 1`] = `
"G21
G90
M3 S0
; layer line-red color #ff0000 power 30% speed 1500 mm/min passes 1
; pass 1 of 1
G0 X10.000 Y390.000 S0
G1 X30.000 Y390.000 F1500 S300
M5
M4 S0
; fill layer fill-#0000ff color #0000ff power 30% speed 1500 mm/min passes 1 overscan 5.000 mm
; pass 1 of 1
G0 X45.000 Y310.000 S0
G0 X50.000 Y310.000 S0
G1 X90.000 Y310.000 F1500 S300
G0 X95.000 Y310.000 S0
G0 X95.000 Y312.000 S0
G0 X90.000 Y312.000 S0
G1 X50.000 Y312.000 F1500 S300
G0 X45.000 Y312.000 S0
G0 X45.000 Y314.000 S0
G0 X50.000 Y314.000 S0
G1 X90.000 Y314.000 F1500 S300
G0 X95.000 Y314.000 S0
G0 X95.000 Y316.000 S0
G0 X90.000 Y316.000 S0
G1 X50.000 Y316.000 F1500 S300
G0 X45.000 Y316.000 S0
G0 X45.000 Y318.000 S0
G0 X50.000 Y318.000 S0
G1 X90.000 Y318.000 F1500 S300
G0 X95.000 Y318.000 S0
G0 X95.000 Y320.000 S0
G0 X90.000 Y320.000 S0
G1 X80.000 Y320.000 F1500 S300
G0 X75.000 Y320.000 S0
G0 X65.000 Y320.000 S0
G0 X60.000 Y320.000 S0
G1 X50.000 Y320.000 F1500 S300
G0 X45.000 Y320.000 S0
G0 X45.000 Y322.000 S0
G0 X50.000 Y322.000 S0
G1 X60.000 Y322.000 F1500 S300
G0 X65.000 Y322.000 S0
G0 X75.000 Y322.000 S0
G0 X80.000 Y322.000 S0
G1 X90.000 Y322.000 F1500 S300
G0 X95.000 Y322.000 S0
G0 X95.000 Y324.000 S0
G0 X90.000 Y324.000 S0
G1 X80.000 Y324.000 F1500 S300
G0 X75.000 Y324.000 S0
G0 X65.000 Y324.000 S0
G0 X60.000 Y324.000 S0
G1 X50.000 Y324.000 F1500 S300
G0 X45.000 Y324.000 S0
G0 X45.000 Y326.000 S0
G0 X50.000 Y326.000 S0
G1 X60.000 Y326.000 F1500 S300
G0 X65.000 Y326.000 S0
G0 X75.000 Y326.000 S0
G0 X80.000 Y326.000 S0
G1 X90.000 Y326.000 F1500 S300
G0 X95.000 Y326.000 S0
G0 X95.000 Y328.000 S0
G0 X90.000 Y328.000 S0
G1 X80.000 Y328.000 F1500 S300
G0 X75.000 Y328.000 S0
G0 X65.000 Y328.000 S0
G0 X60.000 Y328.000 S0
G1 X50.000 Y328.000 F1500 S300
G0 X45.000 Y328.000 S0
G0 X45.000 Y330.000 S0
G0 X50.000 Y330.000 S0
G1 X60.000 Y330.000 F1500 S300
G0 X65.000 Y330.000 S0
G0 X75.000 Y330.000 S0
G0 X80.000 Y330.000 S0
G1 X90.000 Y330.000 F1500 S300
G0 X95.000 Y330.000 S0
G0 X95.000 Y332.000 S0
G0 X90.000 Y332.000 S0
G1 X80.000 Y332.000 F1500 S300
G0 X75.000 Y332.000 S0
G0 X65.000 Y332.000 S0
G0 X60.000 Y332.000 S0
G1 X50.000 Y332.000 F1500 S300
G0 X45.000 Y332.000 S0
G0 X45.000 Y334.000 S0
G0 X50.000 Y334.000 S0
G1 X60.000 Y334.000 F1500 S300
G0 X65.000 Y334.000 S0
G0 X75.000 Y334.000 S0
G0 X80.000 Y334.000 S0
G1 X90.000 Y334.000 F1500 S300
G0 X95.000 Y334.000 S0
G0 X95.000 Y336.000 S0
G0 X90.000 Y336.000 S0
G1 X80.000 Y336.000 F1500 S300
G0 X75.000 Y336.000 S0
G0 X65.000 Y336.000 S0
G0 X60.000 Y336.000 S0
G1 X50.000 Y336.000 F1500 S300
G0 X45.000 Y336.000 S0
G0 X45.000 Y338.000 S0
G0 X50.000 Y338.000 S0
G1 X60.000 Y338.000 F1500 S300
G0 X65.000 Y338.000 S0
G0 X75.000 Y338.000 S0
G0 X80.000 Y338.000 S0
G1 X90.000 Y338.000 F1500 S300
G0 X95.000 Y338.000 S0
G0 X95.000 Y340.000 S0
G0 X90.000 Y340.000 S0
G1 X50.000 Y340.000 F1500 S300
G0 X45.000 Y340.000 S0
G0 X45.000 Y342.000 S0
G0 X50.000 Y342.000 S0
G1 X90.000 Y342.000 F1500 S300
G0 X95.000 Y342.000 S0
G0 X95.000 Y344.000 S0
G0 X90.000 Y344.000 S0
G1 X50.000 Y344.000 F1500 S300
G0 X45.000 Y344.000 S0
G0 X45.000 Y346.000 S0
G0 X50.000 Y346.000 S0
G1 X90.000 Y346.000 F1500 S300
G0 X95.000 Y346.000 S0
G0 X95.000 Y348.000 S0
G0 X90.000 Y348.000 S0
G1 X50.000 Y348.000 F1500 S300
G0 X45.000 Y348.000 S0
; image layer image-#808080 color #808080 power 30%
; 10 × 5 px, 10.000 × 5.000 mm
; feed 1500 mm/min, overscan 5.000 mm, dot width correction 0.000 mm
M5
M4 S0
G0 X100.000 Y295.500 S0
G1 X105.000 F1500 S0
G1 X110.000 S300
G1 X115.000 S0
G0 X115.000 Y296.500 S0
G1 X110.000 S0
G1 X105.000 S300
G1 X100.000 S0
G0 X100.000 Y297.500 S0
G1 X105.000 S0
G1 X110.000 S300
G1 X115.000 S0
G0 X110.000 Y298.500 S0
G1 X105.000 S0
G1 X100.000 S300
G1 X95.000 S0
G0 X95.000 Y299.500 S0
G1 X100.000 S0
G1 X105.000 S300
G1 X110.000 S0
M5
G0 X0.000 Y0.000 S0
"
`;

exports[`emitGcode production composition — fixture snapshots > raster-2x2-threshold produces stable G-code through the shipped pipeline 1`] = `
"G21
G90
M3 S0
; image layer image-#808080 color #808080 power 30%
; 10 × 5 px, 10.000 × 5.000 mm
; feed 1500 mm/min, overscan 5.000 mm, dot width correction 0.000 mm
M5
M4 S0
G0 X100.000 Y295.500 S0
G1 X105.000 F1500 S0
G1 X110.000 S300
G1 X115.000 S0
G0 X115.000 Y296.500 S0
G1 X110.000 S0
G1 X105.000 S300
G1 X100.000 S0
G0 X100.000 Y297.500 S0
G1 X105.000 S0
G1 X110.000 S300
G1 X115.000 S0
G0 X110.000 Y298.500 S0
G1 X105.000 S0
G1 X100.000 S300
G1 X95.000 S0
G0 X95.000 Y299.500 S0
G1 X100.000 S0
G1 X105.000 S300
G1 X110.000 S0
M5
G0 X0.000 Y0.000 S0
"
`;
